Closed Captions aren't displayed properly with avcodec-threads > 1
Closed Captions subtitles arrive to the display too much in advance when --avcodec-threads > 1 (which is the default).
Apparently the vout blocks until the CC pts and the video is not displayed correctly.
--avcodec-threads=1 works fine